@@ -2,6 +2,7 @@
 	- Made JSON specs and recipes work recursively.
 	- Fix bug that caused select filter to fail after explode filter
 	- Added top-level hxl.tagger() function, similar to hxl.data()
+	- add optional default_header arg to hxl.model.Column.parse_spec
 
 2016-10-17 Release 3.3
 	- Regex ~ and !~ operators in row queries now match anywhere in the cell
